--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@tensorflow/tfjs": "^3.6.0",
+    "@tensorflow/tfjs-node": "^3.6.1",
     "@tensorflow/tfjs-vis": "^1.5.1",
     "csvtojson": "^2.0.10",
     "kalimdor": "^1.2.6",
